# dirstory

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  Pipfile  README.md  justfile  pyproject.toml  setup.cfg  setup.py
.github/workflows/: tests.yml
dirstory/: constants.py  stack.py
dirstory/cli/: cli.py  installation.py  list.py  navigate.py  stack.py
dirstory/scripts/: _dirstorypatch  b  f
src/: cli.rs  config.rs  enums.rs  main.rs  shell.rs  stack.rs  utils.rs
test/: Containerfile
test/e2e/: config  runtest.sh
test/e2e/tests/: bash.sh  common.sh  fish.fish  fish.sh  sh.sh  zsh.sh  zsh.zsh
test/e2e/utils/: cmp.sh  helpers.sh
test/unit/: test_cli.py  test_stack.py
