[package]
name = "dirstory"
version = "0.1.0"
authors = ["Jiri Kyjovsky <j1.kyjovsky@gmail.com>"]
about = "Add history functionality to your cd command"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_yaml = "0.9.34"

[dev-dependencies]
tempfile = "3.15.0"
test-case = "3.3.1"
uuid = { version = "1.12.1", features = ["v4"] }
