[tool.poetry]
name = "dirstory"
version = "0.1.0"
description = "Navigate through the directories via command line as in file manager!"
authors = ["Jiri Kyjovsky <j1.kyjovsky@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/nikromen/dirstory"
repository = "https://github.com/nikromen/dirstory"
exclude = ["test/"]

[tool.poetry.dependencies]
python = "^3.7"
click = "~=8.1.3"

[tool.poetry.dev-dependencies]
pytest = "~=7.1.2"
flexmock = "~=0.11.3"
pytest-cov = "~=3.0.0"

[tool.poetry.scripts]
dirstory = "dirstory.cli.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
